# NODIQ-From-Code-to-Comprehension

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/embeddings/: pipeline.py
backend/app/evaluation/: harness.py  questions.py
backend/app/graph/: builder.py
backend/app/ingestion/: importer.py
backend/app/parsing/: models.py
backend/app/parsing/python/: extractor.py
backend/app/reasoning/: graph.py
backend/tests/: test_api.py  test_extractor.py  test_graph_builder.py  test_harness.py  test_importer.py  test_models.py  test_pipeline.py  test_reasoning.py
docs/: NODIQ_PROJECT_GUIDE.md
