[project]
name = "nodiq-backend"
version = "0.1.0"
description = "Nodiq backend: ingestion, parsing, graph, retrieval, and reasoning pipeline."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
