[project]
name = "nodiq-backend"
version = "0.1.0"
description = "Nodiq backend: ingestion, parsing, graph, retrieval, and reasoning pipeline."
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.10.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.8",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
